<resources>
    <string name="app_name">PG Tracker App</string>
    <string name="dynamic_link_domain">xn83k.app.goo.gl</string>
    <string name="deep_link_domain_menu">https://pgtrackerapp.com/menu</string>
    <string name="storage_bucket">gs://dps-hackathon.appspot.com</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>

    <string name="eat">Eat</string>
    <string name="history">History</string>
    <string name="qr">Generate QR</string>
    <string name="menu">Create Menu</string>
    <string name="food">Add Food</string>
    <string name="done">Done</string>
    <string name="share">Share</string>

    <string name="sign_up">Please enter details below.</string>
    <string name="select_meal">Please select your meal below.</string>

    <string name="notif_body">Here\'s the menu for today: </string>

    <!--ProgressDialog messages-->
    <string name="logging_in">Logging in&#8230;</string>
    <string name="registering">Registering&#8230;</string>
    <string name="processing">Processing&#8230;</string>
    <string name="loading">Loading&#8230;</string>

    <!--Error Messages-->
    <string name="error_invalid">Invalid</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_invalid_password">Password must be between 6 and 50 character long and include at least one numeric character.</string>
    <string name="error_password_not_match">Password doesn\'t match.</string>

    <string-array name="meals_array">
        <item>Morning Bites</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Afternoon Bites</item>
        <item>Dinner</item>
    </string-array>

    <string name="invitation_title">Send PG Tracker Invitation</string>
    <string name="invitation_message">Let\'s eat in the pantry! Try this app. It makes checking food faster.</string>
    <string name="invitation_deep_link">https://www.sample.com/invites</string>
    <string name="invitation_custom_image">https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png</string>
    <string name="invitation_cta">Install</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
