<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background3"
    android:padding="15dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_user_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:text="@string/user_name" />

            <TextView
                android:id="@+id/tv_user_email"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:text="@string/user_email" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:visibility="gone"
            android:text="@string/history" />

        <Button
            android:id="@+id/btn_eat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:visibility="gone"
            android:text="@string/eat" />

        <Button
            android:id="@+id/btn_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:clickable="true"
            android:text="@string/menu"
            />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout" />
    </LinearLayout>
</LinearLayout>